--- a/django-backend/Dockerfile
+++ b/django-backend/Dockerfile
@@ -5,5 +5,5 @@ RUN apt-get upgrade -y
 COPY ./requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-COPY ./src ./src
-CMD gunicorn -w 3 --chdir ./src proj.wsgi --bind 0.0.0.0:8000
+COPY ./itproger1 ./itproger1
+CMD gunicorn -w 3 --chdir ./itproger1 itproger1.wsgi --bind 0.0.0.0:8000
