--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -3,6 +3,8 @@ Django==5.0.1
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==24.0
+psycopg==3.1.18
+psycopg2==2.9.9
 pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
